--- a/Dasmoto's Arts & Crafts/index.html
+++ b/Dasmoto's Arts & Crafts/index.html
@@ -8,6 +8,9 @@
     <title>Dasmoto's Arts&Crafts</title>
 </head>
 <body>
+    <header>
+        <h1>Dasmoto's Arts&Crafts</h1>
+    </header>
     
 </body>
 </html>
