new session added

--- a/Dasmoto's Arts & Crafts/index.html
+++ b/Dasmoto's Arts & Crafts/index.html
@@ -11,6 +11,12 @@
     <header>
         <h1>Dasmoto's Arts&Crafts</h1>
     </header>
+    <session id='brushes'>
+        <h2 id="brushes_title">brushes</h2>
+        <img src="./images/hacksaw.webp" alt="hacksaw brushes">
+        <h3>Hacksaw brushes</h3>
+        <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Avaliable in different sizes.<u>Starting at $3.00/brush</u></p>
+    </session>
     
 </body>
 </html>
