--- a/Dasmoto's Arts & Crafts/index.html
+++ b/Dasmoto's Arts & Crafts/index.html
@@ -12,10 +12,16 @@
         <h1>Dasmoto's Arts&Crafts</h1>
     </header>
     <session id='brushes'>
-        <h2 id="brushes_title">brushes</h2>
-        <img src="./images/hacksaw.webp" alt="hacksaw brushes">
+        <h2 id="brushes_title">Brushes</h2>
+        <img src="./images/hacksaw.webp" alt="Hacksaw brushes">
         <h3>Hacksaw brushes</h3>
         <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Avaliable in different sizes.<u>Starting at $3.00/brush</u></p>
+    </session>
+    <session id='frames'>
+        <h2 id="frames_title">Frames</h2>
+        <img src="./images/frames.webp" alt="Frames">
+        <h3>Art Frames (assorted)</h3>
+        <p>Assorted frames made of different material, including MDF, birchwood and PDE. Selected frames can be sanded and painted according to you needs.<u>Starting at $2.00/frame</u></p>
     </session>
     
 </body>
