--- a/Dasmoto's Arts & Crafts/index.html
+++ b/Dasmoto's Arts & Crafts/index.html
@@ -23,6 +23,12 @@
         <h3>Art Frames (assorted)</h3>
         <p>Assorted frames made of different material, including MDF, birchwood and PDE. Selected frames can be sanded and painted according to you needs.<u>Starting at $2.00/frame</u></p>
     </session>
+    <session id='paint'>
+        <h2 id="paint_title">Paint</h2>
+        <img src="./images/finnish.jpeg" alt="Paint tint">
+        <h3>Clean Finish Paint</h3>
+        <p>Imported paint from Finland. Over 265 colors avaliable in-store,varying in quantity (1 oz. to 8 oz.). Clean Finish paint microbinds to canvas, increassing the finish and longevity of any artwork<u>Starting at $5.00/tube</u></p>
+    </session>
     
 </body>
 </html>
