--- a/Dasmoto's Arts & Crafts/index.html
+++ b/Dasmoto's Arts & Crafts/index.html
@@ -15,19 +15,19 @@
         <h2 id="brushes_title">Brushes</h2>
         <img src="./images/hacksaw.webp" alt="Hacksaw brushes">
         <h3>Hacksaw brushes</h3>
-        <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Avaliable in different sizes.<u>Starting at $3.00/brush</u></p>
+        <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Avaliable in different sizes.<span>Starting at $3.00/brush</span></p>
     </session>
     <session id='frames'>
         <h2 id="frames_title">Frames</h2>
         <img src="./images/frames.webp" alt="Frames">
         <h3>Art Frames (assorted)</h3>
-        <p>Assorted frames made of different material, including MDF, birchwood and PDE. Selected frames can be sanded and painted according to you needs.<u>Starting at $2.00/frame</u></p>
+        <p>Assorted frames made of different material, including MDF, birchwood and PDE. Selected frames can be sanded and painted according to you needs.<span>Starting at $2.00/frame</span></p>
     </session>
     <session id='paint'>
         <h2 id="paint_title">Paint</h2>
         <img src="./images/finnish.jpeg" alt="Paint tint">
         <h3>Clean Finish Paint</h3>
-        <p>Imported paint from Finland. Over 265 colors avaliable in-store,varying in quantity (1 oz. to 8 oz.). Clean Finish paint microbinds to canvas, increassing the finish and longevity of any artwork<u>Starting at $5.00/tube</u></p>
+        <p>Imported paint from Finland. Over 265 colors avaliable in-store,varying in quantity (1 oz. to 8 oz.). Clean Finish paint microbinds to canvas, increassing the finish and longevity of any artwork<span>Starting at $5.00/tube</span></p>
     </session>
     
 </body>
